# rapidudf

./: .bazelignore  .bazelrc  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  README_CN.md  WORKSPACE  rapidudf.bzl
rapidudf/: BUILD  CMakeLists.txt  rapidudf.h  version.h
rapidudf/arena/: BUILD  arena.h  leveldb_arena.cc
rapidudf/ast/: BUILD  CMakeLists.txt  ast_pool.h  ast_ptr.h  block.h  context.cc  context.h  expression.cc  expression.h  function.cc  function.h  grammar.cc  grammar.h  grammar_test.cc  lexer.cc  lexer.h  statement.cc  statement.h  symbols.cc  symbols.h
rapidudf/builtin/: BUILD  builtin.cc  builtin.h  json.cc  math.cc  scalar.cc  simd_column.cc  simd_table.cc  simd_vector.cc  stl.cc  stl_maps.cc  stl_sets.cc  string.cc
rapidudf/builtin/simd_vector/: BUILD  binary_ops.cc  column_binary_ops.cc  column_misc_ops.cc  column_ops.h  column_sort_ops.cc  column_ternary_ops.cc  column_unary_ops.cc  dynamic_test.cc  eval.cc  eval.h  fused_ops.cc  misc_ops.cc  ops.h  ops_test.cc  simd_ops.cc  simd_ops.h  simd_ops2.cc  simd_ops_test.cc  sleef.cc  sort_ops.cc  table_ops.cc  table_ops.h  ternary_ops.cc  unary_ops.cc
rapidudf/codegen/: BUILD  code_generator.cc  code_generator.h  code_generator_test.cc  dtype.cc  dtype.h  dtype_test.cc  function.cc  function.h  function_test.cc  optype.h  register.cc  register.h  register_test.cc  value.cc  value.h
rapidudf/codegen/builtin/: BUILD  builtin.cc  builtin.h  builtin_symbols.h  json.cc  json_funcs.cc  math.cc  simd_vector.cc  stl.cc  stl_sets.cc  string.cc  string_funcs.cc
rapidudf/codegen/ops/: BUILD  arithmetic_ops.cc  arithmetic_ops.h  bits_ops.cc  bits_ops.h  cast.cc  cast.h  cast_register_test.cc  cast_stack_test.cc  cmp.cc  cmp.h  cmp_test.cc  copy.cc  copy.h  logic_ops.cc  logic_ops.h  simd_arithmetic_ops.cc  simd_arithmetic_ops.h
rapidudf/codegen/simd/: BUILD  simd_ops.cc  simd_ops.h  simd_ops2.cc  simd_ops_test.cc  simd_sort.cc
rapidudf/common/: AtomicIntrusiveLinkedList.h  BUILD  CMakeLists.txt  allign.h  arrow_helper.h  lazy.h  lru_cache.h  variadic_template_helper.h
rapidudf/compiler/: BUILD  CMakeLists.txt  codegen.cc  codegen.h  codegen_binary.cc  codegen_cast.cc  codegen_ternary.cc  codegen_unary.cc  codegen_value.cc  codegen_vector.cc  compiler.cc  compiler.h  compiler_constants.cc  compiler_eval.cc  compiler_expressions.cc  compiler_statements.cc  function.h  global_compiler.h  macros.h  options.h  type.cc  type.h  value.cc  value.h
rapidudf/container/: BUILD  concurrent_clock_cache.h  concurrent_clock_cache_impl.cc  concurrent_clock_cache_impl.h
rapidudf/context/: BUILD  CMakeLists.txt  context.cc  context.h
rapidudf/copts/: BUILD  configure_copts.bzl
rapidudf/examples/: BUILD  CMakeLists.txt  benchmark.cc  book.fbs  expression.cc  expression_benchmark.cc  fbs_vector_table_udf.cc  pb_vector_table_udf.cc  simd_table.cc  simd_vector.cc  single_udf.cc  struct_vector_table_udf.cc  student.proto  table.cc  vector_table_udf.cc  vector_udf.cc
rapidudf/exec/: BUILD  CMakeLists.txt  eval_engine.cc  eval_engine.h
rapidudf/executors/: BUILD  CMakeLists.txt  thread_pool.cc  thread_pool.h
rapidudf/functions/: BUILD  CMakeLists.txt  functions.cc  functions.h  highway.cc  highway.h  json.cc  math.cc  names.h  simd_table.cc  simd_vector.cc  stl_maps.cc  stl_sets.cc  stl_vector.cc  strings.cc  time.cc
rapidudf/functions/simd/: BUILD  CMakeLists.txt  bits.cc  bits.h  sleef_dispatch-inl.h  string.cc  string.h  vector.h  vector_binary.cc  vector_misc.cc  vector_misc.h  vector_op.h  vector_sort.cc  vector_sort.h  vector_ternary.cc  vector_unary.cc  vqsort-inl.h  vqsort_kv.cc
rapidudf/jit/: BUILD  access.cc  constants.cc  expression.cc  function.h  jit.cc  jit.h  jit_test.cc  llvm_jit.cc  llvm_jit.h  statement.cc
rapidudf/jit/llvm/: BUILD  binary_expression.cc  codegen.cc  codegen.h  constants.cc  eval.cc  function.h  intrinsic.cc  jit.cc  jit.h  jit_cache.cc  jit_cache.h  jit_cache_test.cc  jit_session.h  jit_test.cc  jit_var.cc  macros.h  statement.cc  ternary_expression.cc  (+11 more)
rapidudf/log/: BUILD  CMakeLists.txt  log.cc  log.h
rapidudf/memory/: BUILD  CMakeLists.txt  allocator.h  arena.cc  arena.h  arena_container.h  arena_string.h  folly_arena.cc  folly_arena.h  leveldb_arena.cc  leveldb_arena.h
rapidudf/meta/: BUILD  CMakeLists.txt  constants.h  dtype.cc  dtype.h  dtype_enums.h  dtype_test.cc  exception.h  function.cc  function.h  operand.h  optype.h  type_traits.h  typeid.h  vector_type_traits.h
rapidudf/reflect/: BUILD  CMakeLists.txt  flatbuffers.h  function.h  macros.h  protobuf.h  reflect.cc  reflect.h  reflect_value.h  simd_vector.h  stl.h  stl_access.cc  stl_access.h  struct.h  struct_access.cc  struct_access.h  struct_access_test.cc  struct_test.cc
rapidudf/table/: BUILD  CMakeLists.txt  column.cc  column.h  row.cc  row.h  table.cc  table.h  table_schema.cc  table_schema.h  visitor.h
rapidudf/tests/: BUILD  CMakeLists.txt  arena_test.cc  arithmetic_test.cc  array_test.cc  arrow_test.cc  bench.proto  benchmark.cc  builtin_func_test.cc  cast_test.cc  cmp_test.cc  dot_benchmark.cc  dtype_test.cc  dyn_object_test.cc  eval_engine_test.cc  example_test.cc  exception_test.cc  expr_bench.cc  expression_test.cc  fbs_table_schema.fbs  fbs_test.cc  ffi_fbs_test.cc  ffi_func_test.cc  ffi_stl_test.cc  fib_bench.cc  function_test.cc  global_compiler_test.cc  grammar_test.cc  hwy_test.cc  ifelse_test.cc  json_test.cc  logic_op_test.cc  math_test.cc  multi_function_test.cc  parse_benchmark.cc  pb_table_schema.proto  pb_test.cc  simd_sort_test.cc  simd_table_test.cc  simd_table_test2.cc  (+10 more)
rapidudf/types/: BUILD  CMakeLists.txt  bit.h  bitmap.h  dyn_object.h  dyn_object_impl.h  dyn_object_schema.cc  dyn_object_schema.h  eval_value-inl.h  eval_value.cc  eval_value.h  json_object.h  params.cc  params.h  pointer.h  scalar.cc  scalar.h  simd.cc  simd.h  simd_vector.cc  simd_vector.h  simd_vector_table.cc  simd_vector_table.h  string_view.cc  string_view.h  vector.h  vector.h.bak  vector2d.h
rapidudf/vector/: BUILD  column.h  row.cc  row.h  table.cc  table.h  table_schema.cc  table_schema.h  vector.h
(+56 files in other folders)
