add_subdirectory(ast)
add_subdirectory(common)
add_subdirectory(compiler)
add_subdirectory(context)
add_subdirectory(exec)
add_subdirectory(executors)
add_subdirectory(functions)
add_subdirectory(log)
add_subdirectory(memory)
add_subdirectory(meta)
add_subdirectory(reflect)
add_subdirectory(table)
add_subdirectory(types)
